kubernetes/istio/cleanspeak-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cleanspeak
spec:
  hosts:
    - "myauth.company.com"
  gateways:
    - cleanspeak-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8011
            host: cleanspeak
