kubernetes/istio/search-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cleanspeak-search-discovery
  namespace: default
spec:
  hosts:
    - cleanspeak-search-discovery
  tcp:
    - route:
        - destination:
            host: cleanspeak-search-discovery
            port:
              number: 9300
